<resources>
    <string name="app_name">TeledocApp</string>
    <string name="action_settings">Settings</string>
    <string name="bg">Български</string>
    <string name="en">English</string>
    <string name="login">Вход</string>
    <string name="tologin">Към вход</string>
    <string name="username">Имейл</string>
    <string name="password">Парола</string>
    <string name="invalidmail">Невалиден имейл</string>
    <string name="invalidname">Невалидно име на потребител</string>
    <string name="invalidpassword">Невалиднa парола</string>
    <string name="invalidusername">Невалиден имейл или парола</string>
    <string name="forgottenpassword">Забравена парола</string>
    <string name="registration">Регистрация</string>
    <string name="consultationfor">Консултация за</string>
    <string name="me">Мен</string>
    <string name="Me">Мен</string>
    <string name="Mychild">Моето дете</string>
    <string name="consultationfrom">Консултация от</string>
    <string name="doctor">Лекар</string>
    <string name="pharmacist">Фармацевт</string>
    <string name="issuedescription">Описание на проблема</string>
    <string name="entervalue">Моля, въведете данни</string>
    <string name="sex">Пол</string>
    <string name="female">Жена</string>
    <string name="male">Мъж</string>
    <string name="othersex">Друго</string>
    <string name="bornon">Роден</string>
    <string name="january">Януари</string>
    <string name="february">Февруари</string>
    <string name="march">Март</string>
    <string name="april">Април</string>
    <string name="may">Май</string>
    <string name="june">Юни</string>
    <string name="july">Юли</string>
    <string name="august">Август</string>
    <string name="september">Септември</string>
    <string name="october">Октомври</string>
    <string name="november">Ноември</string>
    <string name="december">Декември</string>
    <string name="GENERALSYMPTOMS">ОБЩИ СИМПТОМИ</string>
    <string name="Fever">Висока температура</string>
    <string name="Chills">Втрисане</string>
    <string name="Headache">Главоболие</string>
    <string name="Coughnomucus">Кашлица /без секрет/</string>
    <string name="Coughmucus">Кашлица /със секрет/</string>
    <string name="Nasalcongestion">Запушен нос</string>
    <string name="Muscleweakness">Мускулна слабост</string>
    <string name="Difficultyswallowing">Трудно преглъщане</string>
    <string name="Sweating">Потене</string>
    <string name="Vertigo">Световъртеж</string>
    <string name="Heartpalpitations">Сърцебиене</string>
    <string name="Fatigue">Умора</string>
    <string name="Coldflashes">Студени вълни</string>
    <string name="Warmflashes">Топли вълни</string>
    <string name="Thirst">Жажда</string>
    <string name="Dizziness">Замайване </string>
    <string name="Eyeredness">Зачервяване на очите</string>
    <string name="Visionproblems">Зрителни проблеми</string>
    <string name="Toothache">Зъбобол</string>
    <string name="Numbnessinhands">Изтръпване на ръцете</string>
    <string name="Nosebleed">Кръвотечение от носа</string>
    <string name="Musclecramps">Мускулни крампи</string>
    <string name="Decreasedhearing">Намален слух</string>
    <string name="Weightgain">Напълняване</string>
    <string name="Shortnessofbreath">Недостиг на въздух</string>
    <string name="Weightloss">Отслабване</string>
    <string name="Swellingoflimbs">Подуване на крайници</string>
    <string name="Sinusitis">Синузит</string>
    <string name="Drymouth">Сухота в устата</string>
    <string name="Sleepiness">Сънливост</string>
    <string name="Wheezing">Хрипове</string>
    <string name="Tinnitus">Шум в Ушите</string>
    <string name="PAIN">БОЛКА</string>
    <string name="Painmuscle">Болка /мускулна/</string>
    <string name="Painabdomen">Болка /в корема/</string>
    <string name="Painchest">Болка /в гърдите/</string>
    <string name="Painback">Болка /в гърба/</string>
    <string name="Painlowback">Болка /в кръста/</string>
    <string name="Painknee">Болка /в коляното/</string>
    <string name="Painleg">Болка /в крака/</string>
    <string name="Painear">Болка /в ухото/</string>
    <string name="Painpelvice">Болка /в пелвиса/</string>
    <string name="Painneck">Болка /във врата/</string>
    <string name="Painurinating">Болка /при уриниране/</string>
    <string name="Paintesticles">Болка /в тестисите/</string>
    <string name="Painrectum">Болка /в ректума/</string>
    <string name="DIGESTIVETRACT">СТОМАШНО-ЧРЕВНИ </string>
    <string name="NauseaVomiting">Гадене / Повръщане</string>
    <string name="Diarrhea">Диария</string>
    <string name="Constipation">Запек</string>
    <string name="HeartburnReflux">Киселини / Рефлукс</string>
    <string name="Gas">Газове</string>
    <string name="Bloating">Подуване на корема</string>
    <string name="Lossofappetite">Загуба на апетит</string>
    <string name="Bloodinstool">Кръв /в изпражненията/</string>
    <string name="DERMATOLOGICAL">КОЖНИ</string>
    <string name="Itching">Сърбеж</string>
    <string name="Bite">Ухапване</string>
    <string name="Rash">Обрив</string>
    <string name="Redness">Зачервяване</string>
    <string name="Swelling">Подуване </string>
    <string name="GINECOLOGICAL">ГИНЕКОЛОГИЧНИ</string>
    <string name="Frequenturination">Често уриниране</string>
    <string name="Vaginaldischarge">Вагинално течение</string>
    <string name="Peniledischarge">Течение от пениса</string>
    <string name="Bloodinurine">Кръв /в урината/</string>
    <string name="Vaginalbleeding">Вагинално кръвотечение</string>
    <string name="Irregularperiod">Нередовен цикъл</string>
    <string name="Swellingtesticles">Подуване /на тестиси/</string>
    <string name="PSYCHOLOGICAL">ПСИХОЛОГИЧНИ</string>
    <string name="Аnxiety">Безпокойство</string>
    <string name="Insomnia">Безсъние</string>
    <string name="Depression">Депресия</string>
    <string name="Memoryloss">Загуба на памет</string>
    <string name="SPECIAL">СПЕЦИАЛНИ </string>
    <string name="Historyofheartattack">Претърпян инфаркт</string>
    <string name="Historyofstroke">Претърпян инсулт</string>
    <string name="Foreigntravelpastmonth">Пътуване в чужбина (през последния месец)</string>
    <string name="Hospitalizedpastsixmonths">Лекуван в болница (последните 6 месеца)</string>
    <string name="issuesymptoms">Наблюдавани симптоми</string>
    <string name="Today">Днес</string>
    <string name="Yesterday">От вчера</string>
    <string name="Week">От седмица</string>
    <string name="Month">От месец</string>
    <string name="Year">От година</string>
    <string name="Years">От повече от една година</string>
    <string name="issuesince">От кога се появиха симптомите</string>
    <string name="issueallergies">Алергии към:</string>
    <string name="enterallergy">Въведете алергия към</string>
    <string name="Cancer">Рак</string>
    <string name="Diabetes">Диабет</string>
    <string name="HeartDisease">Сърдечно-съдово заболяване</string>
    <string name="Highbloodpressure">Високо кръвно налягане</string>
    <string name="Highcholesterol">Висок холестерол</string>
    <string name="Asthma">Астма</string>
    <string name="COPD">ХОББ</string>
    <string name="Stroke">Инсулт</string>
    <string name="Arthritis">Артрит</string>
    <string name="Hypothyroidism">Хипотироидизъм</string>
    <string name="Hyperthyroidism">Хипертиреоидизъм</string>
    <string name="Pregnancy">Бременност</string>
    <string name="Chronicrenaldisease">Хронична бъбречна недостатъчност</string>
    <string name="Crohnsdisease">Болест на Крон</string>
    <string name="Epilepsy">Епилепсия</string>
    <string name="Osteoporosis">Остеопороза</string>
    <string name="Rheumatoidarthritis">Ревматоиден артрит</string>
    <string name="Ulcerativecolitis">Улцерозен колит</string>
    <string name="Alzheimer">Алцхаймер</string>
    <string name="Parkinsonsdisease">Паркингсон</string>
    <string name="Multiplesclerosis">Множествена склероза</string>
    <string name="Bipolarmooddisease">Биполярно разтройство</string>
    <string name="EatingDisorder">Хранително разстройство</string>
    <string name="OtherChronicIllness">Друго заболяване</string>
    <string name="issuechronics">Хронични заболявания</string>
    <string name="enterchronic">Въведете хронично заболяване</string>
    <string name="issuemedicines">Приемани медикаменти</string>
    <string name="entermedication">Въведете приеман медикамент</string>
    <string name="RegisterUser">Регистрация на потребител</string>
    <string name="activationemail">На адреса Ви е изпратен активационен линк</string>
    <string name="register">Регистрация</string>
    <string name="emailexists">Този имейл вече е регистриран</string>
    <string name="fullname">Трите имена на потребителя</string>
    <string name="email">Електронна поща</string>
    <string name="entercorrectvalue">Моля, въведете коректна стойност</string>
    <string name="activation">Активация</string>
    <string name="activationEmailSubject">Активационен линк Teledoc</string>
    <string name="activationEmailText">Моля, кликнете <a href='http://www.teledoc.bg/activateuser?guid={guid}'>тук</a></string>
    <string name="newPassEmailSubject">Сменена Teledoc</string>
    <string name="newPassEmailText">Новата Ви парола е {pass}</string>
    <string name="profileactivation">Вашият профил е активиран</string>
    <string name="Chat">Чат</string>
    <string name="eMail">Електронна поща</string>
    <string name="Call">Обаждане</string>
    <string name="answertype">Начин на консултиране</string>
    <string name="PhoneNumber">Телефонен номер</string>
    <string name="RegisterDoctor">Регистрация на специалист</string>
    <string name="UIN">УИН</string>
    <string name="Doctor">Лекар</string>
    <string name="Pharmacist">Фармацевт</string>
    <string name="specialization">Специализации</string>
    <string name="description">Описание</string>
    <string name="registrationOK">Успешна регистрация</string>
    <string name="users">Потребители</string>
    <string name="search">Търси</string>
    <string name="searchtext">Текст за търсене</string>
    <string name="newexpert">Нов експерт</string>
    <string name="levelname">Вид потребител</string>
    <string name="active">Активен</string>
    <string name="norecords">Няма открити резултати</string>
    <string name="Administrator">Админнистратор</string>
    <string name="Patient">Пациент</string>
    <string name="True">Да</string>
    <string name="False">Не</string>
    <string name="newissue">Консултация</string>
    <string name="changepass">Парола</string>
    <string name="logoff">Изход</string>
    <string name="welcome">Добре дошли</string>
    <string name="Initial">Подадено запитване</string>
    <string name="Taken">Поето от специалист</string>
    <string name="Done">Приключено</string>
    <string name="MainData">Основни данни</string>
    <string name="from">от</string>
    <string name="since">от</string>
    <string name="takeissue">Поемам случая</string>
    <string name="save">Запис</string>
    <string name="Send">Изпрати</string>
    <string name="parametername">Показател</string>
    <string name="count">Брой</string>
    <string name="regpatientscount">Регистрирани пациенти</string>
    <string name="regdoctorscount">Регистрирани лекари</string>
    <string name="regpharmacistscount">Регистрирани фармацевти</string>
    <string name="Successfulchange">Паролата е променена успешно</string>
    <string name="openissues">Търсене на консултация</string>
    <string name="thetermsandconditions">общите условия</string>
    <string name="iaccept">Приемам</string>
    <string name="closedissues">Приключени консултации</string>
    <string name="NoInternet">Моля, осигурете връзка с интернет. В момента такава няма</string>
    <string name="OK">OK</string>
    <string name="Cancel">Отказ</string>
    <string name="Exit">Изход</string>
    <string name="Start">Начало</string>
</resources>