<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="bg.teledoc.teledocapp.MainActivity">
    <item
        android:id="@+id/miBG"
        android:title="@string/bg"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/miEN"
        android:title="@string/en"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/miStart"
        android:title="@string/Start"
        app:showAsAction="collapseActionView"
        />
    <item
        android:id="@+id/miChangePass"
        android:title="@string/password"
        app:showAsAction="collapseActionView"
        />
    <item
        android:id="@+id/miExit"
        android:title="@string/Exit"
        app:showAsAction="collapseActionView"
        />

</menu>
