<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bg.teledoc.teledocapp.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|center_vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.DialogWindowTitle.AppCompat"
            android:text="@string/RegisterUser"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/tbRegEmail"
            android:hint="@string/email"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/tbName"
            android:hint="@string/fullname"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/tbPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbTAC"
                android:text="@string/iaccept"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:linksClickable="true"
                android:textColor="@color/lgreen"
                android:text=" " />
            <TextView
                android:id="@+id/lTAC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:linksClickable="true"
                android:textColor="@color/lgreen"
                android:text="@string/thetermsandconditions" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_gravity="end"
            android:id="@+id/bRegister"
            />


    </android.support.v7.widget.LinearLayoutCompat>


</FrameLayout>
