<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bg.teledoc.teledocapp.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|center_vertical"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.DialogWindowTitle.AppCompat"
            android:text="@string/login"
            />
        <EditText
            android:layout_width="500px"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/tbUserName"
            android:hint="@string/username"
            />
        <EditText
            android:layout_width="500px"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/tbPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="end"
            android:id="@+id/bLogin"
            />

    </android.support.v7.widget.LinearLayoutCompat>


</FrameLayout>
